@@ -160,7 +160,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("RNGMIX Version 2.8.0")
+  message("RNGMIX Version 2.8.1")
   
   flush.console()
   
