@@ -4987,7 +4987,7 @@ int Rebmix::RunTemplateFile(char *file)
     int   Error = 0;
 
     #if (_REBMIXEXE)
-    printf("REBMIX Version 2.8.0\n");
+    printf("REBMIX Version 2.8.1\n");
     #endif
 
     if ((fp = fopen(file, "r")) == NULL) {
